feat: v0.5.7 - Dev Tools System & Comprehensive Logging
New Features:
- Dev Tools system with toggle in Settings > DevTools
- Log Viewer window with real-time frontend/backend logs
- Bug Report via Discord webhook with screenshot + system info
- Keyboard shortcuts: Ctrl+Shift+D/L/B for DevMonitor/LogViewer/BugReport

Improvements:
- Comprehensive console logging across entire application
- All pages and components now log user actions and API calls
- Consistent log prefixes ([Home], [Modrinth], [Skins], etc.)

Fixes:
- Bug report screenshot now captures app content without modal overlay
- Log Viewer window permissions fixed (can now be moved/closed)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>